--- a/package.json
+++ b/package.json
@@ -10,13 +10,23 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.21.0",
+    "@react-native-community/slider": "4.5.5",
     "@react-navigation/native": "^7.1.4",
+    "@react-navigation/native-stack": "^7.3.9",
     "@tensorflow-models/mobilenet": "2.1.0",
-    "@tensorflow/tfjs": "3.21.0",
+    "@tensorflow/tfjs": "3.11.0",
+    "@tensorflow/tfjs-core": "3.11.0",
+    "@tensorflow/tfjs-backend-cpu": "3.11.0",
+    "@tensorflow/tfjs-backend-webgl": "3.11.0",
     "@tensorflow/tfjs-react-native": "0.8.0",
     "expo": "~52.0.0",
+    "expo-gl": "~15.0.5",
+    "expo-camera": "~16.0.18",
+    "expo-image-picker": "~16.0.6",
+    "expo-screen-orientation": "~8.0.4",
     "react": "18.2.0",
-    "react-native": "0.73.4",
+    "react-native": "0.73.11",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.12.0",
